--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>ola mundo</title>
+        <title>Gerador de Senhas Seguras</title>
     </head>
     
     
   <body>
-    <h1>gerador de senhas</h1>
-    <button>Gerar senha segura</button>
+    <h1>Gerador de Senhas Seguras</h1>
+    <button>Gerar Senha Segura</button>
     <h2>...</h2>
-<script src="/src/main.js" type="module"></script>
+<script src="./src/main.js" type="module"></script>
   </body>  
