--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     
   <body>
-    <h1>Gerador de Senhas Seguras</h1>
+    <h1>🔒 Gerador de Senhas Seguras</h1>
     <button>Gerar Senha Segura</button>
     <h2>...</h2>
 <script src="./src/main.js" type="module"></script>
